# certibulk

./: .gitignore  CLEANUP_SUMMARY.md  PRODUCTION_READY.md  README.md  requirements.txt
certificate_app/: .editorconfig  .env.example  .gitattributes  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  PRODUCTION_SETUP_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  STRUCTURE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  wsgi.py
certificate_app/.github/workflows/: code-quality.yml  security.yml  tests.yml
certificate_app/app/: __init__.py
certificate_app/app/models/: __init__.py
certificate_app/app/routes/: __init__.py  auth.py
certificate_app/app/services/: __init__.py
certificate_app/app/utils/: __init__.py
certificate_app/config/: __init__.py  default.py  development.py  production.py  testing.py
certificate_app/docker/: Dockerfile  docker-compose.yml
certificate_app/migrations/: __init__.py
certificate_app/scripts/: backup_db.py  create_sample_data.py  init_db.py
certificate_app/tests/: conftest.py  test_models.py  test_routes.py
